# shell-extension-demos

./: .gitignore  README.md
01-context-menu/: CMakeLists.txt  ClassFactory.cpp  ClassFactory.h  ContextMenuExt.def  ContextMenuHandler.cpp  ContextMenuHandler.h  Guid.h  ModuleRef.h  README.md  dllmain.cpp  install.ps1
02-explorer-command/: CMakeLists.txt  ExplorerCommand.cpp  ExplorerCommand.h  Guid.h  README.md  dllmain.cpp  install.ps1
03-win11-packaging/: CMakeLists.txt  README.md  app.manifest  build-package.ps1  dllmain.cpp
03-win11-packaging/package/: AppxManifest.xml
04-thumbnail/: CMakeLists.txt  Guid.h  README.md  ThumbnailProvider.cpp  ThumbnailProvider.h  dllmain.cpp  install.ps1
05-icon/: CMakeLists.txt  Guid.h  IconHandler.cpp  IconHandler.h  README.md  dllmain.cpp  install.ps1
06-property/: CMakeLists.txt  Guid.h  PropertyStore.cpp  PropertyStore.h  README.md  dllmain.cpp  install.ps1
07-infotip/: CMakeLists.txt  Guid.h  QueryInfoHandler.cpp  QueryInfoHandler.h  README.md  dllmain.cpp  install.ps1
08-propsheet/: CMakeLists.txt  Guid.h  PropSheet.rc  PropSheetHandler.cpp  PropSheetHandler.h  README.md  dllmain.cpp  install.ps1  resource.h
09-preview/: CMakeLists.txt  Guid.h  PreviewHandler.cpp  PreviewHandler.h  README.md  dllmain.cpp  install.ps1
10-drop/: CMakeLists.txt  DropHandler.cpp  DropHandler.h  Guid.h  README.md  dllmain.cpp  install.ps1
11-icon-overlay/: CMakeLists.txt  Guid.h  OverlayHandler.cpp  OverlayHandler.h  README.md  dllmain.cpp  install.ps1
common/: ShellExtBase.h
